--- a/sass/partials/_generics.sass
+++ b/sass/partials/_generics.sass
@@ -46,6 +46,8 @@ h2
 
 ol, ul
   margin-bottom: 1em
+  li
+  margin-left: 25px
 
 article
   img
@@ -59,7 +61,7 @@ article
     &.full
       float: none
 
-blockquote 
+blockquote
   position: relative
   margin: 0 2em 2em 1.5em
   padding:  0 0 0 1em
@@ -68,7 +70,7 @@ blockquote
     margin-bottom: 0.5em
   cite
     font-weight: bold
-  .apostroph 
+  .apostroph
     display: inline
     line-height: 1ex
     position: absolute
